dead/test/invalid/undefined.c
#include "stdio.h"

int main() {
    {
        int i_am_an_undefined_variable = 100;
    }

    return i_am_an_undefined_variable;
}
